# oath-authenticator

./: Cargo.toml  README.md  crates.js  ctaphid.md  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  rust.yml
aead/consts/: index.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  type.N1005.html  type.N1006.html  type.N1007.html  type.N1008.html  type.N1009.html  type.N101.html  type.N1010.html  type.N1011.html  type.N1012.html  type.N1013.html  type.N1014.html  type.N1015.html  type.N1016.html  type.N1017.html  type.N1018.html  (+3239 more)
cbor_smol/consts/: index.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  type.N1005.html  type.N1006.html  type.N1007.html  type.N1008.html  type.N1009.html  type.N101.html  type.N1010.html  type.N1011.html  type.N1012.html  type.N1013.html  type.N1014.html  type.N1015.html  type.N1016.html  type.N1017.html  type.N1018.html  (+3239 more)
cipher/consts/: index.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  (+3254 more)
cstr_core/: struct.CStr.html  struct.FromBytesWithNulError.html  type.c_char.html
examples/: usbip.rs  usbip_simulation.rs
flexiber/: derive.Decodable.html  derive.Encodable.html
fuzz/: Cargo.toml  Makefile  README.md
fuzz/fuzz_targets/: fuzz_target_1.rs
heapless_bytes/: type.True.html
images/: command_format.plantuml  credentials.plantuml  exchange.mermaid  get_code_result.plantuml
iso7816/: all.html  enum.Interface.html  enum.Status.html  index.html  sidebar-items.js  struct.Bytes.html  type.Aid.html  type.Data.html  type.Result.html
littlefs2/: struct.Version.html
littlefs2_sys/: constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.LFS_ATTR_MAX.html  constant.LFS_DISK_VERSION.html  constant.LFS_DISK_VERSION_MAJOR.html  constant.LFS_DISK_VERSION_MINOR.html  constant.LFS_FILE_MAX.html  constant.LFS_NAME_MAX.html  constant.LFS_VERSION.html  constant.LFS_VERSION_MAJOR.html  constant.LFS_VERSION_MINOR.html  constant.PTRDIFF_MAX.html  constant.PTRDIFF_MIN.html  constant.SIG_ATOMIC_MAX.html  constant.SIG_ATOMIC_MIN.html  constant.SIZE_MAX.html  constant.UINT16_MAX.html  constant.UINT32_MAX.html  constant.UINT8_MAX.html  constant.UINTPTR_MAX.html  constant.UINT_FAST16_MAX.html  constant.UINT_FAST32_MAX.html  (+262 more)
oath_authenticator/: all.html  constant.YUBICO_OATH_AID.html  constant.YUBICO_RID.html  index.html  macro.debug.html  macro.debug_now.html  macro.error.html  macro.error_now.html  macro.info.html  macro.info_now.html  macro.log.html  macro.log_now.html  macro.trace.html  macro.trace_now.html  macro.try_debug.html  macro.try_debug_now.html  macro.try_error.html  macro.try_error_now.html  macro.try_info.html  macro.try_info_now.html  macro.try_log_now.html  macro.try_trace.html  macro.try_trace_now.html  macro.try_warn.html  macro.try_warn_now.html  macro.warn.html  macro.warn_now.html  sidebar-items.js
src/: authenticator.rs  calculate.rs  command.rs  credential.rs  ctaphid.rs  encrypted_container.rs  encryption_key.rs  lib.rs  oath.rs  state.rs
trussed/: all.html  fn.cbor_deserialize.html  fn.cbor_serialize.html  fn.cbor_serialize_bytes.html  fn.postcard_deserialize.html  fn.postcard_serialize.html  fn.postcard_serialize_bytes.html  index.html  macro.block.html  macro.platform.html  macro.store.html  macro.syscall.html  macro.try_syscall.html  struct.Bytes.html  trait.Interchange.html
typenum/: macro.op.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  type.N1005.html  type.N1006.html  type.N1007.html  type.N1008.html  type.N1009.html  type.N101.html  type.N1010.html  type.N1011.html  type.N1012.html  type.N1013.html  type.N1014.html  type.N1015.html  type.N1016.html  type.N1017.html  type.N1018.html  (+3239 more)
(+52910 files in other folders)
