[package]
name = "oath-authenticator"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
repository = "https://github.com/trussed-dev/oath-authenticator"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "OATH authenticator Trussed app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apdu-dispatch = { version = "0.1",  optional = true }
delog = "0.1.2"
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
heapless = "0.7"
heapless-bytes = "0.3"
hex-literal = "0.3"
interchange = "0.2"
iso7816 = "0.1"
postcard = "0.7"
serde = { version = "1", default-features = false }
trussed = "0.1"

[features]
default = ["apdu-dispatch"]

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []
