[package]
name = "oath-authenticator"
version = "0.5.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Szczepan Zalega <szczepan@nitrokey.com>"]
repository = "https://github.com/trussed-dev/oath-authenticator"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "OATH authenticator Trussed app"

[dependencies]
apdu-dispatch = { version = "0.1",  optional = true }
delog = "0.1.6"
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
heapless = "0.7"
heapless-bytes = "0.3"
hex-literal = "0.3"
interchange = "0.2"
iso7816 = "0.1"
serde = { version = "1", default-features = false }
trussed = "0.1.0"

# ctaphid
ctaphid-dispatch = { version = "0.1", optional = true }
usbd-ctaphid = { git = "https://github.com/Nitrokey/nitrokey-3-firmware", optional = true }

[dev-dependencies]
log = { version = "0.4.14", default-features = false }
pretty_env_logger = "0.4.0"


[features]
default = ["apdu-dispatch"]
devel = ["apdu-dispatch", "log-all", "delog/std-log", "devel-counters", "devel-ctaphid-bug"]

# Count accesses to the read-only and read-write persistence storage
devel-counters = []

# Account ctaphid bug about 3072 buffer size. To be removed once fixed.
devel-ctaphid-bug = []

# Allow to use application over CTAPHID interface
ctaphid = ["ctaphid-dispatch", "usbd-ctaphid"]

# Do not run the actual encryption of the credentials.
no-encrypted-credentials = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []


[patch.crates-io]
flexiber = { git = "https://github.com/Nitrokey/flexiber", rev = "0.1.1.nitrokey" }