[package]
name = "vault"
version = "0.6.0"
authors = ["Nicolas Stalder <n@stalder.io>", "Szczepan Zalega <szczepan@nitrokey.com>"]
repository = "https://github.com/Nitrokey/nitrokey-vault"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Password Vault and OATH authenticator Trussed app"

[dependencies]
apdu-dispatch = { version = "0.1",  optional = true }
delog = "0.1.6"
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
heapless = "0.7"
heapless-bytes = "0.3"
hex-literal = "0.3"
interchange = "0.2"
iso7816 = "0.1"
serde = { version = "1", default-features = false }
trussed = { version = "0.1", features = ["clients-3"] }

# ctaphid
ctaphid-dispatch = { version = "0.1", optional = true }
usbd-ctaphid = { git = "https://github.com/trussed-dev/usbd-ctaphid", optional = true}

[dev-dependencies]
log = { version = "0.4.14", default-features = false }
pretty_env_logger = "0.4.0"

# below are for running the usbip example
trussed-usbip = { git = "https://github.com/trussed-dev/pc-usbip-runner", default-features = false, features = ["ctaphid"] }
clap = { version = "3.0.0", features = ["cargo", "derive"] }
clap-num = "1.0.0"
delog = { version = "0.1.6", features = ["std-log"] }
fido-authenticator = { version = "0.1", features = ["dispatch", "log-all"] }
admin-app = { version = "0.1", features = ["log-all"] }


[features]
default = ["apdu-dispatch"]
devel = ["apdu-dispatch", "log-all", "delog/std-log", "devel-counters", "devel-ctaphid-bug", "devel-location-internal"]

# Count accesses to the read-only and read-write persistence storage
devel-counters = []

# Account ctaphid bug about 3072 buffer size. To be removed once fixed.
devel-ctaphid-bug = []

# Allow to use application over CTAPHID interface
ctaphid = ["ctaphid-dispatch", "usbd-ctaphid"]

# Do not run the actual encryption of the credentials.
no-encrypted-credentials = []

# Set the default files location to the internal memory. Useful for debugging.
devel-location-internal = []

log-all = []
log-none = []
log-info = []
log-debug = []
log-warn = []
log-error = []

[[example]]
name="usbip"
required-features = ["ctaphid", "devel"]


[patch.crates-io]
flexiber = { git = "https://github.com/Nitrokey/flexiber", rev = "0.1.1.nitrokey" }
apdu-dispatch = { git = "https://github.com/Nitrokey/apdu-dispatch", tag = "v0.1.1-nitrokey-1" }
littlefs2 = { git = "https://github.com/Nitrokey/littlefs2", tag = "v0.3.2-nitrokey-1" }
trussed = { git = "https://github.com/Nitrokey/trussed", tag = "v0.1.0-nitrokey-4" }
usbd-ctaphid = { git = "https://github.com/trussed-dev/usbd-ctaphid"}
