[package]
name = "oath-authenticator-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
apdu-dispatch = { version = "0.1",  optional = true }
flexiber = { version = "0.1.0", features = ["derive", "heapless"] }
heapless = "0.7"
heapless-bytes = "0.3"
hex-literal = "0.3"
interchange = "0.2"
iso7816 = "0.1"
serde = { version = "1", default-features = false }
trussed = { version = "0.1.0", features = ["virt", "verbose-tests"] }
ctaphid-dispatch = { version = "0.1", optional = true }
usbd-ctaphid = { git = "https://github.com/Nitrokey/nitrokey-3-firmware", optional = true }

[dependencies.oath-authenticator]
path = ".."

[features]
default = ["ctaphid-dispatch", "usbd-ctaphid", "apdu-dispatch"]


# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false


[patch.crates-io]
trussed = { git = "https://github.com/trussed-dev/trussed", branch = "main" }
flexiber = { git = "https://github.com/Nitrokey/flexiber", rev = "0.1.1.nitrokey" }
